# teste-back-end-olympic-history

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
core/management/commands/: importcsvdata.py
core/migrations/: 0001_initial.py  0002_alter_athlete_age.py  0003_alter_athlete_height_alter_athlete_weight.py
core/tests/: tests_athlete.py  tests_game.py  tests_modality.py  tests_sport.py  tests_team.py
test_celero/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
